--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 body {
   margin: 0;
+  background-color: darkgray;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 
 code {
@@ -18,6 +20,7 @@ code {
 }
 
 :root {
+  font-size: 100%;
   --color-led-h: 39;
   --color-led-foreground: hsla(var(--color-led-h),100%,50%,1);
   --color-led-background: hsla(var(--color-led-h),100%,5%,1);
