--- a/src/view/components/Clock.module.css
+++ b/src/view/components/Clock.module.css
@@ -1,25 +1,45 @@
 .clockface {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0.4em;
+}
+
+.clockNumbers {
+    font-size: 1.5rem;
     font-family: Digit;
     padding-right: 0.35em;
     box-sizing: border-box;
-    display: inline-block;
+    vertical-align: middle;
 }
 
-.unlit {
+.unlitFace {
     background-color: var(--color-led-background);
-    color: var(--color-led-foreground);
     -webkit-box-shadow: inset 0 -0.1em 0.3em 0.1em var(--color-led-backlight);
     -moz-box-shadow: inset 0 -0.1em 0.3em 0.1em var(--color-led-backlight);
     box-shadow: inset 0 -0.1em 0.3em 0.1em var(--color-led-backlight);
+}
+
+.litFace {
+    background-color: var(--color-led-background-lit);
+    -webkit-box-shadow: inset 0.6em 0.3em 0.6em 0em var(--color-led-background-lit),
+                inset -0.6em 0.3em 0.6em 0em var(--color-led-background-lit),
+                inset 0 -1em 0.6em -0.6em var(--color-led-backlight-lit);
+    -moz-box-shadow: inset 0.6em 0.3em 0.6em 0em var(--color-led-background-lit),
+                inset -0.6em 0.3em 0.6em 0em var(--color-led-background-lit),
+                inset 0 -1em 0.6em -0.6em var(--color-led-backlight-lit);
+    box-shadow: inset 0.6em 0.3em 0.6em 0em var(--color-led-background-lit),
+                inset -0.6em 0.3em 0.6em 0em var(--color-led-background-lit),
+                inset 0 -1em 0.6em -0.6em var(--color-led-backlight-lit);
+}
+
+.unlitNumbers {
+    color: var(--color-led-foreground);
     text-shadow: 0em 0.1em 0.1em rgba(0,0,0,0.5);
 }
 
-.lit {
-    background-color: var(--color-led-backlight-lit);
+.litNumbers {
     color: var(--color-led-foreground-lit);
-    -webkit-box-shadow: inset 0 0.6em 0.6em 0.5em var(--color-led-background-lit);
-    -moz-box-shadow: inset 0 0.6em 0.6em 0.5em var(--color-led-background-lit);
-    box-shadow: inset 0 0.6em 0.6em 0.5em var(--color-led-background-lit);
     text-shadow: 0 0.1em 0.1em rgba(0,0,0,0.5),
-                 0 0 0.2em var(--color-led-foreground);
+                 0 0 0.2em var(--color-led-foreground);    
 }
