--- a/src/view/components/PayloadBox.module.css
+++ b/src/view/components/PayloadBox.module.css
@@ -2,11 +2,19 @@
   background-color: slategray;
   color: whitesmoke;
   flex-grow: 1;
+  flex-shrink: 1;
+  min-width: 3em;
+  min-height: 1em;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .selected {
+  text-overflow: inherit;
+  white-space: pre-wrap;
 }
 
 .unselected {
     box-shadow: inset 0 0.2em 0.3em 0 rgba(0,0,0,0.3);
+    white-space: nowrap;
 }
