--- a/src/view/StreamList.module.css
+++ b/src/view/StreamList.module.css
@@ -7,7 +7,7 @@
     flex-wrap: wrap;
 
     background: #1D2329;
-    background-image: linear-gradient(left, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0) 50%, rgba(0,0,0,0) 100%);
+    background-image: linear-gradient(to right, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0) 50%, rgba(0,0,0,0) 100%);
     background-position: 40% 50%;
     background-size: 2px 2px;
     user-select: none;
