set working in panel

--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,14 @@ code {
   --color-led-foreground: hsla(var(--color-led-h),100%,50%,1);
   --color-led-background: hsla(var(--color-led-h),100%,5%,1);
   --color-led-backlight: hsla(var(--color-led-h),100%,30%,0.4);
+
   --color-led-foreground-lit: hsla(var(--color-led-h),80%,80%,1);
   --color-led-background-lit: hsla(var(--color-led-h),100%,20%,1);
   --color-led-backlight-lit: hsla(var(--color-led-h),80%,80%,0.5);
+
+  --color-led-foreground-dim: hsla(var(--color-led-h),100%,20%,1);
+  --color-led-background-dim: hsla(var(--color-led-h),100%,5%,1);
+  --color-led-backlight-dim: hsla(var(--color-led-h),100%,10%,0.3);
 }
 
 #root {
