--- a/src/view/components/Clock.module.css
+++ b/src/view/components/Clock.module.css
@@ -14,7 +14,14 @@
     vertical-align: middle;
 }
 
-.unlitFace {
+.dimFace {
+    background-color: var(--color-led-background-dim);
+    -webkit-box-shadow: inset 0 -0.1em 0.3em 0.1em var(--color-led-backlight-dim);
+    -moz-box-shadow: inset 0 -0.1em 0.3em 0.1em var(--color-led-backlight-dim);
+    box-shadow: inset 0 -0.1em 0.3em 0.1em var(--color-led-backlight-dim);
+}
+
+.normalFace {
     background-color: var(--color-led-background);
     -webkit-box-shadow: inset 0 -0.1em 0.3em 0.1em var(--color-led-backlight);
     -moz-box-shadow: inset 0 -0.1em 0.3em 0.1em var(--color-led-backlight);
@@ -34,7 +41,12 @@
                 inset 0 -1em 0.6em -0.6em var(--color-led-backlight-lit);
 }
 
-.unlitNumbers {
+.dimNumbers {
+    color: var(--color-led-foreground-dim);
+    text-shadow: 0em 0.1em 0.1em rgba(0,0,0,0.5);
+}
+
+.normalNumbers {
     color: var(--color-led-foreground);
     text-shadow: 0em 0.1em 0.1em rgba(0,0,0,0.5);
 }
