--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,9 +2,12 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    height: 100%;
+    height: 100vh;
 }
 
 .eventList {
     flex-grow: 1;
+    flex-shrink: 1;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
