--- a/src/view/EventInput.module.css
+++ b/src/view/EventInput.module.css
@@ -1,8 +1,9 @@
 .main {
     display: flex;
     flex-direction: row;
-    width: 100%;
     justify-content: space-between;
+    padding: 1rem;
+    gap: 1rem;
 }
 
 .textarea {
@@ -12,9 +13,64 @@
     overflow-y: auto;
     padding: 0;
     outline: none;
+    box-shadow: 0em 1em 1em 0.5em rgba(0,0,0,0.15) inset;
 }
 
+
 .addButton {
+    --col-main: #0054d1;
+    --ln-edge: 0.2em;
+    --ln-negEdge: calc(-1 * var(--ln-edge));
+    --col-dropShadow: rgba(0,0,0,0.47);
+    --ln-holeEdge: 0.1em;
+    --ln-negHoleEdge: calc(-1 * var(--ln-holeEdge));
+    --col-darkEdge: rgba(0,0,0,0.27);
+    --col-lightEdge: rgba(255,255,255,0.27);
+    --col-coloredDarkEdge: #003f9d;
+    --col-coloredDarkerEdge: #002a6a;
+    --col-text: #fff;
+    --col-fadeText: rgba(255, 255, 255, 0.47);
     flex-grow: 0;
-    padding: 1em;
+    padding: 0.5em 1em;
+    background:
+        linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.13)),
+        radial-gradient(90% 7% at 50% 8%,
+        rgba(255, 255, 255, 0.47) 25%,
+        rgba(255, 255, 255, 0) 50%),
+        #0054d1;
+    border: 0;
+    border-radius: 0.375em;
+    box-shadow:
+        0.2em 0.2em 0.5em rgba(0, 0, 0, 0.47),
+        0 -0.1em 0 0.1em rgba(0, 0, 0, 0.27),
+        0 0.1em 0 0.1em rgba(255, 255, 255, 0.27),
+        -0.2em 0 0.2em #003f9d inset,
+        0 0.2em 0.2em rgba(255, 255, 255, 0.27) inset,
+        0.2em 0 0.2em rgba(255, 255, 255, 0.27) inset,
+        0 -0.2em 0.2em #003f9d inset;
+    color: #fff;
+    cursor: pointer;
+    font: 1.3rem sans-serif;
+    text-shadow: 0 0 0.2em rgba(255, 255, 255, 0.47);
+    transition-property: box-shadow;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-out;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.addButton:focus {
+    outline: none;
+    color: #9dc4ff;
+    text-shadow: 0 0 0.2em rgba(157, 196, 255, 0.47);
+}
+
+.addButton:active {
+    box-shadow:
+        0 0 0 rgba(0, 0, 0, 0.47),
+        0 -0.1em 0 0.1em rgba(0, 0, 0, 0.27),
+        0 0.1em 0 0.1em rgba(255, 255, 255, 0.27),
+        -0.2em 0 0.2em #002a6a inset,
+        0 0.2em 0.2em rgba(0, 0, 0, 0.27) inset,
+        0.2em 0 0.2em rgba(0, 0, 0, 0.27) inset,
+        0 -0.2em 0.2em #002a6a inset;
 }
