--- a/src/view/components/Clock.module.css
+++ b/src/view/components/Clock.module.css
@@ -6,12 +6,31 @@
     user-select: none;
 }
 
+li:hover .clockface {
+    background-color: var(--color-led-background-lit);
+    -webkit-box-shadow: inset 0.6em 0.3em 0.6em 0em var(--color-led-background-lit),
+                inset -0.6em 0.3em 0.6em 0em var(--color-led-background-lit),
+                inset 0 -1em 0.6em -0.6em var(--color-led-backlight-lit);
+    -moz-box-shadow: inset 0.6em 0.3em 0.6em 0em var(--color-led-background-lit),
+                inset -0.6em 0.3em 0.6em 0em var(--color-led-background-lit),
+                inset 0 -1em 0.6em -0.6em var(--color-led-backlight-lit);
+    box-shadow: inset 0.6em 0.3em 0.6em 0em var(--color-led-background-lit),
+                inset -0.6em 0.3em 0.6em 0em var(--color-led-background-lit),
+                inset 0 -1em 0.6em -0.6em var(--color-led-backlight-lit);
+}
+
 .clockNumbers {
     font-size: 1.5rem;
     font-family: Digit;
     padding-right: 0.35em;
     box-sizing: border-box;
     vertical-align: middle;
+}
+
+li:hover .clockNumbers {
+    color: var(--color-led-foreground-lit);
+    text-shadow: 0 0.1em 0.1em rgba(0,0,0,0.5),
+                 0 0 0.2em var(--color-led-foreground);
 }
 
 .dimFace {
