--- a/src/view/components/PayloadBox.module.css
+++ b/src/view/components/PayloadBox.module.css
@@ -1,20 +1,27 @@
 .box {
-  background-color: slategray;
-  color: whitesmoke;
-  flex-grow: 1;
-  flex-shrink: 1;
+  color: black;
   min-width: 3em;
+  width: 100%;
   min-height: 1em;
   overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
+  display: flex;
+  align-items: center;
+  padding: 0.5em;
 }
 
-.selected {
-  text-overflow: inherit;
-  white-space: pre-wrap;
+li:hover > .box {
+  background-color: white;
+  box-shadow: 0em 1em 1em 0.5em rgba(0,0,0,0.05) inset;
 }
 
-.unselected {
-    box-shadow: inset 0 0.2em 0.3em 0 rgba(0,0,0,0.3);
-    white-space: nowrap;
+.normal {
+  background-color: #f5f5f5;
+  box-shadow: 0em 1em 1em 0.5em rgba(0,0,0,0.15) inset;
+}
+
+.dim {
+  background-color: #7f7f7f;
+  box-shadow: none;
 }
