--- a/src/view/EventInput.module.css
+++ b/src/view/EventInput.module.css
@@ -11,9 +11,16 @@
     flex-grow: 1;
     border: 0 none white;
     overflow-y: auto;
-    padding: 0;
+    padding: 3px;
     outline: none;
     box-shadow: 0em 1em 1em 0.5em rgba(0,0,0,0.15) inset;
+    box-sizing: border-box;
+}
+
+.textarea.invalidInput {
+    box-shadow:
+        0 1em 1em 0.5em rgba(0,0,0,0.15) inset,
+        0 0 0 3px red inset;
 }
 
 
