--- a/src/view/EventInput.module.css
+++ b/src/view/EventInput.module.css
@@ -1,4 +1,5 @@
 .main {
+    flex-grow: 1;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -63,6 +64,8 @@
     transition-duration: 0.1s;
     transition-timing-function: ease-out;
     -webkit-tap-highlight-color: transparent;
+    height: 3rem;
+    align-self: center;
 }
 
 .addButton:focus {
